# aoc-runner

./: .gitignore  AGENTS.md  Cargo.toml  README.md  aoc.db  build.rs
.github/workflows/: benchmark-pr.yml
benches/: bench.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: demo.cast
macros/: Cargo.toml
macros/src/: lib.rs
solution-macro/: Cargo.toml
solution-macro/src/: lib.rs
solutions/aoc-2025-01-1/: Cargo.toml
solutions/aoc-2025-01-1/src/: main.rs
solutions/aoc-2025-01-2/: Cargo.toml
solutions/aoc-2025-01-2/src/: main.rs
solutions/aoc-2025-02-1/: Cargo.toml
solutions/aoc-2025-02-1/src/: main.rs
solutions/aoc-2025-02-2/: Cargo.toml
solutions/aoc-2025-02-2/src/: main.rs
solutions/aoc-2025-03-1/: Cargo.toml
solutions/aoc-2025-03-1/src/: main.rs
solutions/aoc-2025-03-2/: Cargo.toml
solutions/aoc-2025-03-2/src/: main.rs
solutions/aoc-2025-04-1/: Cargo.toml
solutions/aoc-2025-04-1/src/: main.rs
solutions/aoc-2025-04-2/: Cargo.toml
solutions/aoc-2025-04-2/src/: main.rs
solutions/aoc-2025-05-1/: Cargo.toml
solutions/aoc-2025-05-2/: Cargo.toml
solutions/aoc-2025-06-1/: Cargo.toml
solutions/aoc-2025-06-2/: Cargo.toml
solutions/aoc-2025-07-1/: Cargo.toml
solutions/aoc-2025-07-2/: Cargo.toml
solutions/aoc-2025-08-1/: Cargo.toml
solutions/aoc-2025-08-2/: Cargo.toml
solutions/aoc-2025-09-1/: Cargo.toml
solutions/aoc-2025-09-2/: Cargo.toml
solutions/aoc-2025-10-1/: Cargo.toml
solutions/aoc-2025-10-2/: Cargo.toml
solutions/aoc-2025-11-1/: Cargo.toml
solutions/aoc-2025-11-2/: Cargo.toml
solutions/aoc-2025-12-1/: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs  solution.rs  solutions.rs
src/solutions/: mod.rs  y2025_d01_p1.rs  y2025_d01_p2.rs  y2025_d02_p1.rs  y2025_d02_p2.rs  y2025_d03_p1.rs  y2025_d03_p2.rs  y2025_d04_p1.rs  y2025_d04_p2.rs  y2025_d05_p1.rs  y2025_d05_p2.rs  y2025_d06_p1.rs  y2025_d06_p2.rs  y2025_d07_p1.rs  y2025_d07_p2.rs  y2025_d08_p1.rs  y2025_d08_p2.rs  y2025_d09_p1.rs  y2025_d09_p2.rs  y2025_d10_p1.rs  y2025_d10_p2.rs  y2025_d11_p1.rs  y2025_d11_p2.rs  y2025_d12_p1.rs
tests/: verify.rs
(+41 files in other folders)
