[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
libsql = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
inventory = "0.3"
paste = "1"
ahash = "0.8.12"
pathfinding = "4.14.0"
petgraph = { version = "0.8.3", features = ["rayon"] }
z3 = "0.19.5"

[dev-dependencies]
libtest-mimic = "0.8"
divan = "0.1"

[[test]]
name = "verify"
harness = false

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
