[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
libsql = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
inventory = "0.3"
aoc-macros = { path = "macros" }
ahash = "0.8.12"
pathfinding = "4.14.0"
petgraph = { version = "0.8.3", features = ["rayon"] }
z3 = "0.19.5"

[build-dependencies]
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
